--- a/src/App.css
+++ b/src/App.css
@@ -558,6 +558,14 @@ video {
   position: absolute;
 }
 
+.relative {
+  position: relative;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
 .float-end {
   float: inline-end;
 }
@@ -582,12 +590,37 @@ video {
   margin: 11rem;
 }
 
-.-ml-8 {
-  margin-left: -2rem;
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 
-.-ml-96 {
-  margin-left: -24rem;
+.mx-10 {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+}
+
+.mx-32 {
+  margin-left: 8rem;
+  margin-right: 8rem;
+}
+
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
+
+.mx-40 {
+  margin-left: 10rem;
+  margin-right: 10rem;
+}
+
+.-ml-40 {
+  margin-left: -10rem;
+}
+
+.-ml-8 {
+  margin-left: -2rem;
 }
 
 .-ms-5 {
@@ -598,8 +631,8 @@ video {
   margin-top: -2.5rem;
 }
 
-.-mt-12 {
-  margin-top: -3rem;
+.-mt-14 {
+  margin-top: -3.5rem;
 }
 
 .-mt-20 {
@@ -616,10 +649,6 @@ video {
 
 .-mt-56 {
   margin-top: -14rem;
-}
-
-.-mt-6 {
-  margin-top: -1.5rem;
 }
 
 .me-3 {
@@ -730,36 +759,32 @@ video {
   margin-top: 24rem;
 }
 
-.-ms-10 {
-  margin-inline-start: -2.5rem;
+.me-4 {
+  margin-inline-end: 1rem;
 }
 
-.-ms-20 {
-  margin-inline-start: -5rem;
-}
-
-.-ml-20 {
-  margin-left: -5rem;
-}
-
-.-ml-40 {
-  margin-left: -10rem;
+.me-5 {
+  margin-inline-end: 1.25rem;
 }
 
 .flex {
   display: flex;
 }
 
-.grid {
-  display: grid;
-}
-
 .h-10 {
   height: 2.5rem;
 }
 
+.h-14 {
+  height: 3.5rem;
+}
+
 .h-20 {
   height: 5rem;
+}
+
+.h-32 {
+  height: 8rem;
 }
 
 .h-40 {
@@ -778,16 +803,8 @@ video {
   height: 16rem;
 }
 
-.h-auto {
-  height: auto;
-}
-
-.h-14 {
-  height: 3.5rem;
-}
-
-.w-20 {
-  width: 5rem;
+.h-\[800px\] {
+  height: 800px;
 }
 
 .w-40 {
@@ -808,6 +825,10 @@ video {
 
 .w-72 {
   width: 18rem;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .cursor-not-allowed {
@@ -834,17 +855,28 @@ video {
   border-radius: 9999px;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
 .border-2 {
   border-width: 2px;
+}
+
+.border-blue-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(96 165 250 / var(--tw-border-opacity));
+}
+
+.border-orange-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(234 88 12 / var(--tw-border-opacity));
 }
 
 .border-red-500 {
   --tw-border-opacity: 1;
   border-color: rgb(239 68 68 / var(--tw-border-opacity));
+}
+
+.border-violet-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(109 40 217 / var(--tw-border-opacity));
 }
 
 .border-white {
@@ -862,6 +894,11 @@ video {
   background-color: rgb(239 239 239 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#F5F5F5\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -870,6 +907,11 @@ video {
 .bg-gray-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+
+.bg-gray-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
 .bg-gray-950 {
@@ -889,20 +931,25 @@ video {
   padding: 0.5rem;
 }
 
-.p-20 {
-  padding: 5rem;
-}
-
 .p-4 {
   padding: 1rem;
 }
 
-.p-3 {
-  padding: 0.75rem;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
-.p-5 {
-  padding: 1.25rem;
+.pt-4 {
+  padding-top: 1rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-start {
+  text-align: start;
 }
 
 .align-middle {
@@ -924,6 +971,11 @@ video {
   line-height: 1;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -937,6 +989,10 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.font-\[400\] {
+  font-weight: 400;
 }
 
 .text-black {
