--- a/src/App.css
+++ b/src/App.css
@@ -991,6 +991,11 @@ video {
   line-height: 1rem;
 }
 
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .font-\[400\] {
   font-weight: 400;
 }
