--- a/src/App.css
+++ b/src/App.css
@@ -1024,6 +1024,16 @@ video {
   line-height: 2.5rem;
 }
 
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
 .font-\[400\] {
   font-weight: 400;
 }
