--- a/src/App.css
+++ b/src/App.css
@@ -590,8 +590,8 @@ video {
   margin: 0.75rem;
 }
 
-.m-44 {
-  margin: 11rem;
+.m-1 {
+  margin: 0.25rem;
 }
 
 .mx-3 {
@@ -658,6 +658,10 @@ video {
   margin-inline-end: 0.75rem;
 }
 
+.ml-0 {
+  margin-left: 0px;
+}
+
 .ml-10 {
   margin-left: 2.5rem;
 }
@@ -666,12 +670,12 @@ video {
   margin-left: 3rem;
 }
 
-.ml-20 {
-  margin-left: 5rem;
+.ml-2 {
+  margin-left: 0.5rem;
 }
 
-.ml-32 {
-  margin-left: 8rem;
+.ml-20 {
+  margin-left: 5rem;
 }
 
 .ml-52 {
@@ -684,6 +688,10 @@ video {
 
 .mr-10 {
   margin-right: 2.5rem;
+}
+
+.mr-48 {
+  margin-right: 12rem;
 }
 
 .ms-10 {
@@ -726,6 +734,10 @@ video {
   margin-top: 2.5rem;
 }
 
+.mt-14 {
+  margin-top: 3.5rem;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -766,20 +778,20 @@ video {
   margin-top: 24rem;
 }
 
-.mt-16 {
-  margin-top: 4rem;
+.-mt-2 {
+  margin-top: -0.5rem;
 }
 
-.mt-1 {
-  margin-top: 0.25rem;
+.-mt-1 {
+  margin-top: -0.25rem;
 }
 
-.mt-14 {
-  margin-top: 3.5rem;
+.me-1 {
+  margin-inline-end: 0.25rem;
 }
 
-.mt-12 {
-  margin-top: 3rem;
+.me-2 {
+  margin-inline-end: 0.5rem;
 }
 
 .flex {
@@ -792,6 +804,10 @@ video {
 
 .h-14 {
   height: 3.5rem;
+}
+
+.h-16 {
+  height: 4rem;
 }
 
 .h-20 {
@@ -814,16 +830,24 @@ video {
   height: 1.25rem;
 }
 
-.h-64 {
-  height: 16rem;
+.h-72 {
+  height: 18rem;
 }
 
 .h-\[800px\] {
   height: 800px;
 }
 
-.h-72 {
-  height: 18rem;
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-12 {
+  height: 3rem;
 }
 
 .w-11\/12 {
@@ -842,12 +866,20 @@ video {
   width: 10rem;
 }
 
+.w-44 {
+  width: 11rem;
+}
+
 .w-48 {
   width: 12rem;
 }
 
 .w-5 {
   width: 1.25rem;
+}
+
+.w-60 {
+  width: 15rem;
 }
 
 .w-64 {
@@ -860,14 +892,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-52 {
-  width: 13rem;
-}
-
-.w-60 {
-  width: 15rem;
 }
 
 .cursor-not-allowed {
@@ -906,9 +930,9 @@ video {
   border-top-width: 1px;
 }
 
-.border-gray-300 {
+.border-gray-100 {
   --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+  border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
 
 .border-gray-500 {
@@ -967,6 +991,14 @@ video {
   padding: 0.75rem;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
+.p-0 {
+  padding: 0px;
+}
+
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -994,6 +1026,11 @@ video {
   line-height: 2.25rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -1009,37 +1046,8 @@ video {
   line-height: 1rem;
 }
 
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
 .font-\[400\] {
   font-weight: 400;
-}
-
-.font-bold {
-  font-weight: 700;
 }
 
 .font-extrabold {
